deployment-celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wee-in-backend-dev-worker-deployment
  namespace: dev
  labels:
    app: wee-in-backend-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wee-in-backend-dev
  template:
    metadata:
      labels:
        app: wee-in-backend-dev
    spec:
      containers:
      - name: wee-in-backend-dev
        image: IMAGE_NAME
        command: ["celery", "-A", "config", "worker", "--loglevel=info"]
        ports:
        - containerPort: 8000
