redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: la7-redis
  namespace: dev
spec:
  selector:
    app: la7-redis
  ports:
    - protocol: TCP
      port: 6379
