service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fits-backend-stg
  namespace: dev
  labels:
    service: 5fits-backend-stg
spec:
  type: ClusterIP
  selector:
    app: 5fits-backend-stg
  ports:
  - port: 80         # ClusterIP port
    targetPort: 8000   # Pod port
