ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asg-statistics-backend-prod
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  ingressClassName: nginx
  rules:
   - host: asg-statistics-backend.shelter-technology.com
     http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: asg-statistics-backend-prod
            port:
              number: 80
